# grammarie

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
grammarie/: __init__.py  types.py
tests/: test_types.py
